{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 11,
  "lineage": "3a0ff04a-c336-c1c5-e1b3-cf31586f6468",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SGRoup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a5ba5a6f-5c8e-44e2-b065-9957e23fa095/resourceGroups/jeevaCreation/providers/Microsoft.Network/networkSecurityGroups/SGRoup",
            "location": "westeurope",
            "name": "SGRoup",
            "resource_group_name": "jeevaCreation",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jeevaCreation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a5ba5a6f-5c8e-44e2-b065-9957e23fa095/resourceGroups/jeevaCreation/providers/Microsoft.Network/networkSecurityGroups/snet",
            "location": "westeurope",
            "name": "snet",
            "resource_group_name": "jeevaCreation",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jeevaCreation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "guid": "dd92a83e-32d3-47cf-8126-a4235f9b7a97",
            "id": "/subscriptions/a5ba5a6f-5c8e-44e2-b065-9957e23fa095/resourceGroups/jeevaCreation/providers/Microsoft.Network/virtualNetworks/VNET",
            "location": "westeurope",
            "name": "VNET",
            "resource_group_name": "jeevaCreation",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a5ba5a6f-5c8e-44e2-b065-9957e23fa095/resourceGroups/jeevaCreation/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a5ba5a6f-5c8e-44e2-b065-9957e23fa095/resourceGroups/jeevaCreation/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/a5ba5a6f-5c8e-44e2-b065-9957e23fa095/resourceGroups/jeevaCreation/providers/Microsoft.Network/networkSecurityGroups/snet"
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_network_security_group.snet",
            "azurerm_resource_group.jeevaCreation"
          ]
        }
      ]
    }
  ]
}